# MMfaucet

./: CHANGELOG.md  LICENSE  MMfaucet.cabal  cabal.project
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/src/: Win32-net_-e9415802910225c6.cache  cardano-a_-69e96f3eceed3ed5.cache  cardano-b_-c0de99f0ccd585cd.cache  cardano-c_-e62f2aeae532ef4f.cache  cardano-l_-793ecdcee1fc1ce7.cache  cardano-n_-17dfc790a23ed210.cache  cardano-p_-98329c466570048a.cache  cardano-w_-c9e033b0ec7ad11b.cache  flat-5d3bff3e9951fc1.cache  goblins-7fe4f5e9bbbd1224.cache  iohk-moni_-c7ca6b005d6f76c5.cache  ouroboros_-268d3b2310e5b441.cache  plutus-3b55de0732f6b166.cache  plutus-ap_-cbcc5c6ab544aad6.cache  purescrip_-fa901c7e00b7f37b.cache  servant-p_-232829bf471577c2.cache
src/: Faucet.hs
